Changelog
=========

1.1.8 (unreleased)
------------------

- Nothing changed yet.


1.1.7 (2015-07-14)
------------------

- Fix AttributeError: 'NoneType' object has no attribute 'getroottree' when the result is not
  html / is empty.
  [sunew]

1.1.6 (2015-05-04)
------------------

- Nothing changed yet.


1.1.5 (2015-04-28)
------------------

- Fix load pluginSettings for the enabled theme before calling plugins for
  onEnabled and call onEnabled plugins with correct parameters
  [datakurre]

- Add an error log if the subrequest failed (probably a relative xi:include)
  instead of silently returning None (and so having a xi:include returning
  nothing).
  [vincentfretin]


1.1.4 (2015-02-24)
------------------

- Fix dependency-problem introduced in 1.1.3 (Fixes #32)
  [pbauer]


1.1.3 (2014-10-20)
------------------

- Fix "Insufficient Privileges" for "Site Administrators" on the control panel.
  [@rpatterson]


1.1.2 (2014-09-07)
------------------

- Add "Test Styles" button in control panel to expose, test_rendering template.
  [runyaga]

- (backport) #14107 bot requests like /widget/oauth_login/info.txt causes
  problems finding correct context with plone.app.theming
  [anthonygerrard]


1.1.1 (2013-05-23)
------------------

- Fixed i18n issues.
  [thomasdesvenain]

- Fixed i18n issues.
  [jianaijun]

- This fixed UnicodeDecodeError when Theme Title is Non-ASCII
  in the manifest.cfg file.
  [jianaijun]


1.1 (2013-04-06)
----------------

- Fixed i18n issues.
  [vincentfretin]

- Make the template theme do what it claims to do: copy styles as
  well as scripts.
  [smcmahon]

- Change the label and description for the example theme to supply useful
  information.
  [smcmahon]

- Upgrades from 1.0 get the combined "Theming" control panel that was added in
  1.1a1.
  [danjacka]


1.1b2 (2013-01-01)
------------------

- Ensure host blacklist utilises SERVER_URL to correctly determine hostname
  for sites hosted as sub-folders at any depth.
  [davidjb]
